2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp
	  - some preparations for damage simulation

2003-07-26  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - new panel design, panel features resize, hiding planned.

2003-07-25  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - introduced fog.
	* game.cpp
	  - fixed cloud clip bug.

2003-07-23  Thorsten Jordan <thorsten_jordan@gmx.de>
	* Improved conning tower model with textures.

2003-07-22  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_display.cpp
	  - added display of conning tower model.

2003-07-17  Thorsten Jordan <thorsten_jordan@gmx.de>
	* sound.cpp
	  - used SDL_InitSubSystem at pre-Init stage.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* submarine_interface.cpp
	  - show torpedo that is to be moved as ghost image.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* submarine_interface.cpp
	  - implemented manual torpedo (re)loading and transfer.
	    automatic loading disabled.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* new model: small tanker. (now 11 ship and sub models)

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* font.h font.cpp (and client files)
	  - replaced "const char" with "string"
	* submarine_interface.cpp
	  - new torpedo images and drawing.
	  - draw info about available torpedo types.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* replaced medium merchant model by new model.
	* introduced small merchant model.
	  - now ten ships available, 3 merchants, 2 freighters, 2 warships,
	    1 troopships, 2 escorts.

2003-07-12  Thorsten Jordan <thorsten_jordan@gmx.de>
	* further new model.

2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* introduced two new models.

2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* sea_object.cpp game.cpp convoy.cpp etc.
	  - new throttle model. more code for custom mission generation.

2003-07-10  Thorsten Jordan <thorsten_jordan@gmx.de>