@@ -49,6 +49,7 @@ public:
 	void draw_image(int x, int y, int w, int h, const texture* t) const;
 	void draw_hm_image(int x, int y, int w, int h, const texture* t) const;	// horizontally mirrored
 	void draw_vm_image(int x, int y, int w, int h, const texture* t) const;	// vertically mirrored
+	void draw_rot_image(int x, int y, double angle, const texture* t) const;	// draw rotated image
 	void draw_tiles(int x, int y, int w, int h, unsigned tiles, unsigned tilesy,
 		const texture* t) const;	
 	void draw_rectangle(int x, int y, int w, int h);
